# advent-of-code-2025

./: .gitattributes  Cargo.toml  deny.toml  flake.nix
benches/: benchmark.rs
data/: d01.txt  d02.txt  d03.txt  d04.txt  d05.txt  d06.txt  d07.txt  d08.txt  d09.txt  d10.txt  d11.txt  d12.txt
scripts/: get_data.sh
src/: days.rs  main.rs
src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d08.rs  d09.rs  d10.rs  d11.rs  template.rs  utils.rs
